# apps/api/openapi.json
@@ -77,17 +77,6 @@
             "title": "Difficulty",
             "type": "string"
           },
-          "failureReason": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Failurereason"
-          },
           "id": {
             "format": "uuid",
             "title": "Id",
